--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>Covalent Portfolio</title>
     <link href="index.css" rel="stylesheet" >
   </head>
-  <body>
+  <body class="bg-dark text-light">
 
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
